--- a/css/postes.css
+++ b/css/postes.css
@@ -1,4 +1,5 @@
-.l-equipe {
+.postes {
+  display: flex-inline;
   margin-top: 15px;
   text-align: center;
 }
@@ -10,17 +11,7 @@ h1 {
   margin-top: 5px;
 }
 
-.image-container {
-  display: inline-flex;
-}
-
-@media (max-width: 800px) {
-  .image-container {
-    display: block;
-  }
-}
-
-.equipe-item {
+.postes-item {
   border: 0px solid black;
   background-color: #ffebdc;
   border-radius: 8px;
@@ -29,12 +20,7 @@ h1 {
   padding-top: 15px;
   padding-left: 5px;
   padding-right: 5px;
+  padding-bottom: 15px;
   margin-right: 10px;
-}
-
-.image-container img {
-  width: 75%;
-  height: auto;
-  margin-left: 10px;
-  border-radius: 8px;
+  margin-bottom: 10px;
 }
