--- a/css/postes.css
+++ b/css/postes.css
@@ -24,3 +24,21 @@ h1 {
   margin-right: 10px;
   margin-bottom: 10px;
 }
+
+a.link-contact {
+  color: black;
+}
+
+.box-contact {
+  border: 0px solid black;
+  background-color: grey;
+  border-radius: 8px;
+  box-shadow: 5px 5px 15px black;
+
+  padding-top: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 15px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
