--- a/css/postes.css
+++ b/css/postes.css
@@ -2,6 +2,7 @@
   display: flex;
   margin-top: 15px;
   text-align: center;
+  flex-direction: column;
 }
 
 h1 {
@@ -26,7 +27,7 @@ h1 {
 }
 
 a.link-contact {
-  color: black;
+  color: white;
 }
 
 .box-contact {
