--- a/css/faq.css
+++ b/css/faq.css
@@ -33,3 +33,11 @@ h4{
     font-size: 15px;
     margin-top: -40px;
 }
+
+@media (max-width: 800px) {
+    section.content {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+    }
+}
