--- a/css/team.css
+++ b/css/team.css
@@ -14,12 +14,6 @@ h1 {
   display: inline-flex;
 }
 
-@media (max-width: 800px) {
-  .image-container {
-    display: block;
-  }
-}
-
 .equipe-item {
   border: 0px solid black;
   background-color: #ffebdc;
@@ -37,4 +31,18 @@ h1 {
   height: auto;
   margin-left: 10px;
   border-radius: 8px;
+}
+
+@media (max-width: 800px) {
+  section.content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .l-equipe {
+    margin-left: 10px;
+  }
+  .image-container {
+    display: block;
+  }
 }
