--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,10 @@ video#accueil {
 
 .video-layer {
   width: 100%;
-  height: 100%;
+  height: 1080px;
+  top: 0px;
+  left: 0px;
+  z-index: 2;
+  position: absolute;
   background: rgba(0, 0, 0, 0.5);
 }
